--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Cony Ciro</h2>
+                <h2 class="nav__title">Cony Ciroco</h2>
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
