--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Cony Ciroco</h2>
+                <h2 class="nav__title">Cony Ciro</h2>
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
@@ -68,26 +68,31 @@
 
     <main>
         <section class="container about">
-            <h2 class="subtitle">¿Què aprenderaz en este curso?</h2>
-            <p class="about__paragraph">Todo lo necesario y obligatorio sobre manicuria (Limado, preparacion de la fibra natural, esmaltado, productos y màs)</p>
+            <h2 class="subtitle">¿Qué aprenderaz en los cursos?</h2>
+            <p class="about__paragraph">Todo lo necesario y obligatorio sobre manicuria (Higiene, productos, limado, preparacion de la fibra natural, esmaltado, y más)</p>
 
             <div class="about__main">
                 <article class="about__icons">
-                    <img src="images/shapes.svg" class="about__icon" alt="">
+                    <img src="images/muscle.png" class="about__icon" alt="">
                     <h3 class="about__title">Acrilicas</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus omnis temporibus illo. Provident?</p>
+                    <p class="about__paragraph">Las uñas en acrílico destacan en duración sobre las otras técnicas de aplicación, logrando hasta 30-60 días de crecimiento. <br>
+                        Implica una mayor dificultad de aplicación y tiempo de trabajo.
+                        </p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="images/paint.svg" class="about__icon" alt="">
+                    <img src="images/polygel.png" class="about__icon" alt="">
                     <h3 class="about__title">Polygel</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus omnis temporibus illo. Provident?</p>
+                    <p class="about__paragraph">En comparación con las acrílicas las uñas en polygel brindan mayor facilidad de construcción y menor durabilidad. <br>
+                        El acabado final es exactamente igual.</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="images/code.svg" class="about__icon" alt="">
-                    <h3 class="about__title">Capping/kapping</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus omnis temporibus illo. Provident?</p>
+                    <img src="images/kapping.png" class="about__icon" alt="">
+                    <h3 class="about__title">Soft gel</h3>
+                    <p class="about__paragraph">En cuanto al soft gel, nos brinda una facilidad y velocidad de construcción inmensa en comparación con sus hermanas acrílicas y polygel, pero no logra brindarnos duración.
+                        Estas uñas son muy sensibles a cualquier golpe o maltrato físico.
+                        </p>
                 </article>
             </div>
         </section>
@@ -96,12 +101,48 @@
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Acrilicas. ¡Domina las tecnicas de uñas en acrilico!</h2>
-                    <p class="knowledge__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ullam eius soluta quae suscipit quia fugit ex numquam placeat, veritatis facilis molestiae repellat eaque explicabo similique! Officiis vero facilis eum?</p>
+                    <p class="knowledge__paragraph">En este curso te llevare paso a paso por el arte de la creación de uñas en acrílico.
+                        Aprenderás a dominar la mejor técnica de construcción que utilice y fui desarrollando a lo largo de 10 años.
+                        Esta técnica es la indicada si buscas realizar uñas duraderas. <br>
+                        (Materiales incluidos).
+                        </a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-acrilicas.jpg" class="knowledge__img" alt="">
+                </figure>
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de Polygel. ¡Domina las tecnicas de uñas en polygel!</h2>
+                    <p class="knowledge__paragraph">En este curso aprenderás a dominar el polygel. <br>
+                        Llevando a cabo  construcciones con moldes y capsulas, con una terminación de esmaltado. <br>
+                        (Materiales incluidos).
+                        </a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-polygel.jpg" class="knowledge__img" alt="">
+                </figure>
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de Soft gel. ¡Domina las tecnicas de uñas en softgel!</h2>
+                    <p class="knowledge__paragraph">En este curso llevaras a cabo la veloz técnica del soft gel. <br>
+                        Aprenderás la colocación de los tips, una óptima adherencia y un buen acabado de tus trabajos. <br>
+                        (Materiales incluidos).
+                        </p>
                     <a href="#" class="cta">Entra al curso</a>
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="images/acrilicas.jpg" class="knowledge__img" alt="">
+                    <img src="images/knowledge-softgel.jpg" class="knowledge__img" alt="">
                 </figure>
             </div>
         </section>
