--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </nav>
 
         <section class="hero__container container">
-            <h1 class="hero__title">Aprende las tecnicas de manicuria que más te guste hasta dominarlas.</h1>
-            <a href="" class="cta">Comienza ahora</a>
+            <h1 class="hero__title">Aprende las tecnicas de belleza que más te gusten hasta lograr la excelencia.</h1>
+            <a href="#" class="cta" id="comienzaahora">Comienza ahora</a>
         </section>
     </header>
 
@@ -93,8 +93,17 @@
                 <article class="about__icons">
                     <img src="images/kapping.png" class="about__icon" alt="">
                     <h3 class="about__title">Soft gel</h3>
-                    <p class="about__paragraph">En cuanto al soft gel, nos brinda una facilidad y velocidad de construcción inmensa en comparación con sus hermanas acrílicas y polygel, pero no logra brindarnos duración.
-                        Estas uñas son muy sensibles a cualquier golpe o maltrato físico.
+                    <p class="about__paragraph">En cuanto al soft gel, nos brinda una facilidad y velocidad de construcción inmensa en comparación con sus hermanas acrílicas y polygel, pero no logra brindarnos durabilidad.
+                        Excepto la técnica única de soft que brinda la profe a la capacitación, durando más de 35 días.
+                        </p>
+                </article>
+
+                <article class="about__icons">
+                    <img src="images/pestana.png" class="about__icon" alt="">
+                    <h3 class="about__title">Pestaña pelo por pelo</h3>
+                    <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
+                        Técnica natural y duradera.
+                        
                         </p>
                 </article>
             </div>
@@ -146,6 +155,23 @@
 
                 <figure class="knowledge__picture">
                     <img src="images/knowledge-softgel.jpg" class="knowledge__img" alt="">
+                </figure>
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de Pestañas pelo por pelo. ¡Domina la colocación de pestañas!</h2>
+                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
+                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
+                        
+                        </p>
+                    <a href="#" class="cta">más info</a>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-pestanas.jpg" class="knowledge__img" alt="">
                 </figure>
             </div>
         </section>
@@ -202,6 +228,19 @@
                         <p class="price__features">Encapsuladas</p>
                         <p class="price__features">Decoraciones</p>
                     </div>
+                    <a href="#" class="price__cta">Empieza ahora</a>
+                </div>
+                <!-- SEPARADOR-->
+                <div class="price__element">
+                    <p class="price__name">Soft gel más decoración con pedreria</p>
+                    <h3 class="plan__price">$4.000</h3>
+
+                    <div class="price__items">
+                        <p class="price__features">Esculpidas</p>
+                        <p class="price__features">Encapsuladas</p>
+                        <p class="price__features">Decoraciones</p>
+                    </div>
+
                     <a href="#" class="price__cta">Empieza ahora</a>
                 </div>
                 <!-- SEPARADOR-->
