Conexión del navbar con la landing page

--- a/index.html
+++ b/index.html
@@ -42,16 +42,19 @@
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="" class="nav__links">Inicio</a>
+                    <a href="#inicio" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links">Acerca de</a>
+                    <a href="#cursos" class="nav__links">Cursos</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links">Contacto</a>
+                    <a href="#testimonio" class="nav__links">Testimonio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="" class="nav__links">Blog</a>
+                    <a href="#questions" class="nav__links">Preguntas frecuentes</a>
+                </li>
+                <li class="nav__items">
+                    <!-- <a href="#questions" class="nav__links">Contacto</a> -->
                 </li>
 
                 <img src="images/close.svg" alt="close" class="nav__close">
@@ -69,7 +72,7 @@
     </header>
 
     <main>
-        <section class="container about">
+        <section class="container about" id="inicio">
             <h2 class="subtitle">¿Qué aprenderaz en los cursos?</h2>
             <p class="about__paragraph">Todo lo necesario y obligatorio sobre manicuria (Higiene, productos, limado, preparacion de la fibra natural, esmaltado, y más).</p>
             <p class="hero__paragraph">Elige aprender manicuria, una vez termines un curso, seras capaz de desenvolverte profesionalmente en la tecnica que hayas elegido.</p>
@@ -110,7 +113,7 @@
             </div>
         </section>
 
-        <section class="knowledge">
+        <section class="knowledge" id="cursos">
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Acrilicas. ¡Domina las tecnicas de uñas en acrilico!</h2>
@@ -498,7 +501,7 @@
         
         </section>
 
-        <section class="testimony">
+        <section class="testimony" id="testimonio">
             <h2 class="subtitle subtitle--testimony">Testimonios de alumnas</h2>
             <div class="testimony__container container">
                 <img src="images/leftarrow.svg" alt="" class="testimony__arrow" id="before">
@@ -552,7 +555,7 @@
             <a href="https://www.facebook.com/cursoscony/reviews/?ref=page_internal" class="cta cta--testimony" target="_blank" Rel=»Noopener Noreferrer>Ver Opiniones en Facebook</a>
         </section>
 
-        <section class="questions container">
+        <section class="questions container" id="questions">
             <h2 class="subtitle">Preguntas frecuentes</h2>
             <p class="questions__paragraph">Si tu duda no se resuelve aqui por favor contactame.</p>
 
