--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Aplicación desde 0</p>
+                        <p class="price__features">Aplicación desde cero</p>
                         <p class="price__features">Encapsuladas</p>
                         <p class="price__features">Decoraciones</p>
                     </div>
@@ -649,14 +649,6 @@
                 </ul>
             </nav>
 
-            <!-- <form class="footer__form" action="https://formspree.io/f/mjvdbodp"
-            method="POST">
-                <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
-                <div class="footer__inputs">
-                    <input type="email" placeholder="Email" class="footer__input" name="email">
-                    <input type="submit" value="Registrate" class="footer__submit">
-                </div>
-            </form> -->
         </section>
 
         <section class="footer__copy container">
