Ajuste de botones para versión Mobile

--- a/index.html
+++ b/index.html
@@ -652,13 +652,13 @@
         </section>
 
         <section class="footer__copy container">
-            <div class="footer__social">
+            <!-- <div class="footer__social">
                 <a href="#" class="footer__icons">
                     <img src="images/facebook.svg" alt="" class="footer__img">
                     <img src="images/twitter.svg" alt="" class="footer__img">
                     <img src="images/youtube.svg" alt="" class="footer__img">
                 </a>
-            </div>
+            </div> -->
 
             <h3 class="footer__copyright">Derechos reservados &copy; Constanza Ciro</h3>
         </section>
