Correccion de texto
Se corrigieron algunos textos en.

Modal >Uñas Acrilicas

Testimonio: Punto al final de cada nombre

Preguntas frecuentes: Corrección de cursada de un solo dia.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <input type="checkbox" id="btn-modal--acrilicas">
                 <div class="container-modal--acrilicas">
                     <div class="content-modal--acrilicas">
-                        <h2>UÑAS EN ACRILICAS</h2>
+                        <h2>UÑAS ACRILICAS</h2>
                         <p>📅🕛Jornada: 6hs <br>
                             <br>
                             💅🏻🖌️Algunos temas a trabajar: <br>
@@ -507,7 +507,7 @@
                 <img src="images/leftarrow.svg" alt="" class="testimony__arrow" id="before">
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__text">
-                        <h2 class="subtitle">Mi nombre es Melanie Fleitas, <span class="testimony__course">estudiante integral completo.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Melanie Fleitas. <span class="testimony__course">estudiante integral completo.</span></h2>
                         <p class="testimony__review">Muy contenta y satisfecha con todo cony 🥰 se aprende muy bien con vos y siempre estás atenta a todo, súper recomendable!</p>
                     </div>
 
@@ -518,7 +518,7 @@
 
                 <section class="testimony__body" data-id="2">
                     <div class="testimony__text">
-                        <h2 class="subtitle">Mi nombre es Aylén Guzmán, <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Aylén Guzmán. <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
                         <p class="testimony__review">Hoy asistí al curso de extensiones de pestañas pelo por pelo, se las super recomiendo es un amor y explica muy bien 🥰</p>
                     </div>
 
@@ -529,7 +529,7 @@
 
                 <section class="testimony__body" data-id="3">
                     <div class="testimony__text">
-                        <h2 class="subtitle">Mi nombre es Paola Sayago, <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Paola Sayago. <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
                         <p class="testimony__review">Asistí al curso de pestañas pelo x pelo y es muy específico,agradable grupo y mucha paciencia Cony🤩.</p>
                     </div>
 
@@ -540,7 +540,7 @@
 
                 <section class="testimony__body" data-id="4">
                     <div class="testimony__text">
-                        <h2 class="subtitle">Mi nombre es Natalia Maciel, <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Natalia Maciel. <span class="testimony__course">estudiante de extensiones de pestañas pelo por pelo.</span></h2>
                         <p class="testimony__review">Hice la capacitación de curso estoy satisfecha excelente! estoy esperando al perfeccionamiento 💗
                             Muy bien explicado por la profe.</p>
                     </div>
@@ -582,7 +582,7 @@
                                 <img src="images/arrow.svg"  class="questions__img" alt="">
                             </span>
                         </h3>
-                        <p class="questions__show">Una manicura integral es aquella que posee conocimientos de la mayoría de las técnicas de manicura. </p>
+                        <p class="questions__show">Una manicura integral es aquella que posee conocimientos de la mayoría y de las técnicas principales de manicuria. </p>
                     </div>
                 </article>
 
@@ -593,7 +593,7 @@
                                 <img src="images/arrow.svg"  class="questions__img" alt="">
                             </span>
                         </h3>
-                        <p class="questions__show">Todos los cursos son de un solo día, empezando siempre a las 13hs y su finalización depende del curso que sea.
+                        <p class="questions__show">Todos los cursos son de un día, una jornada larga y completa, empezando siempre a las 13hs y su finalización depende del curso que sea.
                             </p>
                     </div>
                 </article>
