Cambio de foto knowledge
Se cambio la foto de Acrilicas

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="images/knowledge-acrilicas.jpg" class="knowledge__img" alt="">
+                    <img src="images/knowledge-acrilicas.png" class="knowledge__img" alt="">
                 </figure>
 
                 <!--Boton ACRILICAS-->
