Codigo no utilizado
Se borro parte del código en desuso.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="#cursos" class="nav__links">Cursos</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#testimonio" class="nav__links">Testimonio</a>
+                    <a href="#testimonio" class="nav__links">Testimonios</a>
                 </li>
                 <li class="nav__items">
                     <a href="#questions" class="nav__links">Preguntas frecuentes</a>
@@ -635,16 +635,16 @@
                 <h2 class="footer__title">Cursos de manicuria.</h2>
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
-                        <a href="" class="nav__links">Inicio</a>
+                        <a href="#inicio" class="nav__links">Inicio</a>
                     </li>
                     <li class="nav__items">
-                        <a href="" class="nav__links">Acerca de</a>
+                        <a href="#cursos" class="nav__links">Cursos</a>
                     </li>
                     <li class="nav__items">
-                        <a href="" class="nav__links">Contacto</a>
+                        <a href="#questions" class="nav__links">Preguntas frecuentes</a>
                     </li>
                     <li class="nav__items">
-                        <a href="" class="nav__links">Blog</a>
+                        <a href="#testimonio" class="nav__links">Testimonios
                     </li>
                 </ul>
             </nav>
