--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                     <div class="price__items">
                         <p class="price__features">Aplicación desde cero</p>
                         <p class="price__features">Encapsuladas</p>
-                        <p class="price__features">Decoraciones</p>
+                        <p class="price__features">Moldes y syste dual</p>
                     </div>
 
                     <a href="https://walink.co/6bb097" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
@@ -463,7 +463,7 @@
                     <p class="price__name">Semi permanente, kapping gel y kapping en polygel.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
                     <div class="price__items">
-                        <p class="price__features">Esculpidas</p>
+                        <p class="price__features">Esmaltado kapping gel</p>
                         <p class="price__features">Encapsuladas</p>
                         <p class="price__features">Decoraciones</p>
                     </div>
@@ -471,7 +471,7 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">Esmaltado semi permanente, kapping gel y kapping en polygel</p>
+                    <p class="price__name">Pestañas pelo por pelo</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
 
                     <div class="price__items">
@@ -557,7 +557,7 @@
 
         <section class="questions container" id="questions">
             <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions__paragraph">Si tu duda no se resuelve aqui por favor contactame.</p>
+            <p class="questions__paragraph">Si tu duda no se resuelve aquí por favor contáctame.</p>
 
             <section class="questions__container">
 
