--- a/index.html
+++ b/index.html
@@ -107,7 +107,22 @@
                     <h3 class="about__title">Pestaña pelo por pelo</h3>
                     <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
                         Técnica natural y duradera.
-                        
+                        </p>
+                </article>
+
+                <article class="about__icons">
+                    <img src="images/volumen.png" class="about__icon" alt="">
+                    <h3 class="about__title">Volumen ruso del 2D al 6D</h3>
+                    <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
+                        Técnica natural y duradera.
+                        </p>
+                </article>
+
+                <article class="about__icons">
+                    <img src="images/lifting.png" class="about__icon" alt="">
+                    <h3 class="about__title">Lifting y permanente con tintura de pestañas y cejas + perfilado de cejas</h3>
+                    <p class="about__paragraph">Técnica clásica ideal para comenzar con tu formación como lashista <br>
+                        Técnica natural y duradera.
                         </p>
                 </article>
             </div>
@@ -301,60 +316,6 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de Pestañas pelo por pelo. ¡Domina la colocación de pestañas!</h2>
-                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
-                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
-                        </p>
-                </div>
-
-                <figure class="knowledge__picture">
-                    <img src="images/knowledge-pestanas.jpg" class="knowledge__img" alt="">
-                </figure>
-
-                <!--Boton PESTAÑAS-->
-                <div class="boton-modal--pestanas">
-                    <label for="btn-modal--pestanas">
-                        Más info
-                    </label>
-                </div>
-                <!--Fin de Boton PESTAÑAS-->
-                <!-- MODAL PESTAÑAS-->
-                <input type="checkbox" id="btn-modal--pestanas">
-                <div class="container-modal--pestanas">
-                    <div class="content-modal--pestanas">
-                        <h2>Pestañas pelo por pelo</h2>
-                        <p>💕🎓Jornada de 3hs aproximadamente <br>
-
-                            🎓👁️✨Temario extensiones 1x1: <br>
-                            <br>
-                        💖Higienización de párpado y pestañas. <br>
-                        💖Tipos de adherentes. <br>
-                        💖Herramientas y materiales. <br>
-                        💖Preparación de diseñeo y distribución. <br>
-                        💖Tecnica de aplicación y fijado. <br>
-                        💖Asesoramiento de cuidados y recomendaciones. <br>
-                        <br>
-                        🎓💐Incluye: <br>
-                        👉🏻 Certificado de asistencia 🎓📃 <br>
-                        👉🏻 Materiales para trabajar en clase 👁️💄 <br>
-                        👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
-                        <br>
-                        <br>
-                        🎓👉🏻Costo 👁️✨ $3500 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
-                        📝Sólo con inscripción previa 💅🏻🎓
-                        <div class="btn-cerrar--pestanas">
-                            <label for="btn-modal--pestanas">Cerrar</label>
-                        </div>
-                    </div>
-                    <label for="btn-modal--pestanas" class="cerrar-modal--pestanas"></label>
-                </div>
-                <!-- FIN MODAL PESTAÑAS-->
-            </div>
-        </section>
-
-        <section class="knowledge">
-            <div class="knowledge__container container">
-                <div class="knowledge__texts">
                     <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel.</h2>
                     <p class="knowledge__paragraph">En este curso aprenderás todo lo necesario para realizar un buen esmaltado semi permanente + técnica de kapping gel y kapping en polygel.
                         </p>
@@ -415,6 +376,163 @@
             </div>
         </section>
 
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de Pestañas pelo por pelo.</h2>
+                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
+                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
+                        </p>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-pestanas.jpg" class="knowledge__img" alt="">
+                </figure>
+
+                <!--Boton PESTAÑAS-->
+                <div class="boton-modal--pestanas">
+                    <label for="btn-modal--pestanas">
+                        Más info
+                    </label>
+                </div>
+                <!--Fin de Boton PESTAÑAS-->
+                <!-- MODAL PESTAÑAS-->
+                <input type="checkbox" id="btn-modal--pestanas">
+                <div class="container-modal--pestanas">
+                    <div class="content-modal--pestanas">
+                        <h2>Pestañas pelo por pelo</h2>
+                        <p>💕🎓Jornada de 3hs aproximadamente <br>
+
+                            🎓👁️✨Temario extensiones 1x1: <br>
+                            <br>
+                        💖Higienización de párpado y pestañas. <br>
+                        💖Tipos de adherentes. <br>
+                        💖Herramientas y materiales. <br>
+                        💖Preparación de diseñeo y distribución. <br>
+                        💖Tecnica de aplicación y fijado. <br>
+                        💖Asesoramiento de cuidados y recomendaciones. <br>
+                        <br>
+                        🎓💐Incluye: <br>
+                        👉🏻 Certificado de asistencia 🎓📃 <br>
+                        👉🏻 Materiales para trabajar en clase 👁️💄 <br>
+                        👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
+                        <br>
+                        <br>
+                        🎓👉🏻Costo 👁️✨ $3500 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
+                        📝Sólo con inscripción previa 💅🏻🎓
+                        <div class="btn-cerrar--pestanas">
+                            <label for="btn-modal--pestanas">Cerrar</label>
+                        </div>
+                    </div>
+                    <label for="btn-modal--pestanas" class="cerrar-modal--pestanas"></label>
+                </div>
+                <!-- FIN MODAL PESTAÑAS-->
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de Pestañas Volumen ruso.</h2>
+                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
+                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
+                        </p>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-volumenruso.jpg" class="knowledge__img" alt="">
+                </figure>
+
+                <!--Boton PESTAÑAS VOLUMEN-->
+                <div class="boton-modal--volumen">
+                    <label for="btn-modal--volumen">
+                        Más info
+                    </label>
+                </div>
+                <!--Fin de Boton PESTAÑAS VOLUMEN-->
+                <!-- MODAL PESTAÑAS VOLUMEN-->
+                <input type="checkbox" id="btn-modal--volumen">
+                <div class="container-modal--volumen">
+                    <div class="content-modal--volumen">
+                        <h2>VOLUMEN
+                        </h2>
+                        <p>💕🎓Jornada de 3hs aproximadamente <br>
+
+                            🎓👁️✨Temario extensiones 1x1: <br>
+                            <br>
+                        💖Higienización de párpado y pestañas. <br>
+                        💖Tipos de adherentes. <br>
+                        💖Herramientas y materiales. <br>
+                        💖Preparación de diseñeo y distribución. <br>
+                        <div class="btn-cerrar--volumen">
+                            <label for="btn-modal--volumen">Cerrar</label>
+                        </div>
+                    </div>
+                    <label for="btn-modal--volumen" class="cerrar-modal--volumen"></label>
+                </div>
+                <!-- FIN MODAL PESTAÑAS VOLUMEN-->
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas.</h2>
+                    <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
+                        Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
+                        </p>
+                </div>
+
+                <figure class="knowledge__picture">
+                    <img src="images/knowledge-lifting.jpg" class="knowledge__img" alt="">
+                </figure>
+
+                <!--Boton PESTAÑAS LIFTING-->
+                <div class="boton-modal--lifting">
+                    <label for="btn-modal--lifting">
+                        Más info
+                    </label>
+                </div>
+                <!--Fin de Boton PESTAÑAS LIFTING-->
+                <!-- MODAL PESTAÑAS LIFTING-->
+                <input type="checkbox" id="btn-modal--lifting">
+                <div class="container-modal--lifting">
+                    <div class="content-modal--lifting">
+                        <h2>LIFTING Y PERMANENTE CON TINTURA DE PESTAÑAS Y CEJAS + PERFILADO DE CEJAS.</h2>
+                        <p>🥰👁️✨ Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas 👁️💆‍♀️🎓<br>
+                            <br>
+                            💕🎓Jornada de 4/5hs aproximadamente<br>
+                            💖Cupos reducidos práctica entre alumnas 💆‍♀️👁️💕🎓 Y de paso recibís un mimo y te vas con las pestañas y las cejas bellas y arregladas 💖🥰🤗<br>
+                            <br>
+                             🎓💆‍♀️👁️ Temario lifting y permanente con tintura para perfilado:<br>
+                             <br>
+                            💖Higienización zona de trabajo.<br>
+                            💖Herramientas y materiales.<br>
+                            💖Práctica perfilado de cejas.<br>
+                            💖Práctica lifting y permanente.<br>
+                            💖Tecnica de tintura natural para cejas.<br>
+                            💖Tintura de pestañas.<br>
+                            <br>
+                            🎓💐Incluye:<br>
+                            👉🏻 Certificado de asistencia 🎓📃<br>
+                            👉🏻 Materiales para trabajar en clase 👁️💆‍♀️<br>
+                            👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
+                            <br>
+                            🎓👉🏻Costo 👁️💆‍♀️ $4000 💕📝 (Inscripción de $1000 y los restantes $3000 a abonar el día de la cursada) <br>
+                            <br>
+                            💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
+                            <br>
+                            📍 En el centro de Merlo, a la vuelta del Vea 🛒 del mástil, a una cuadra y media de la Av.Libertador.<br>
+                        <div class="btn-cerrar--lifting">
+                            <label for="btn-modal--lifting">Cerrar</label>
+                        </div>
+                    </div>
+                    <label for="btn-modal--lifting" class="cerrar-modal--lifting"></label>
+                </div>
+                <!-- FIN MODAL PESTAÑAS LIFTING-->
+            </div>
+        </section>
+
         <section class="price container">
             <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
 
@@ -447,7 +565,7 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">Manicura en Esculpidas y encapsuladas en polygel</p>
+                    <p class="price__name">Manicura en Esculpidas y encapsuladas en polygel.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
 
                     <div class="price__items">
@@ -471,7 +589,7 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">Pestañas pelo por pelo</p>
+                    <p class="price__name">Pestañas pelo por pelo.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
 
                     <div class="price__items">
