--- a/index.html
+++ b/index.html
@@ -535,21 +535,17 @@
 
         <section class="price container">
             <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
-
             <div class="price__table">
                 <div class="price__element">
                     <p class="price__name">Gelificadas y esculpidas en acrílico.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>7.000</h3>
-
                     <div class="price__items">
                         <p class="price__features">Aplicación</p>
                         <p class="price__features">Colocación de base tips y moldes</p>
                         <p class="price__features">Esculpidas</p>
                     </div>
-
                     <a href="https://walink.co/07d3cd" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
-            
                 <!-- SEPARADOR-->
                 <div class="price__element price__element--best">
                     <p class="price__name">Manicura integral completo</p>
@@ -567,13 +563,11 @@
                 <div class="price__element">
                     <p class="price__name">Manicura en Esculpidas y encapsuladas en polygel.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
-
                     <div class="price__items">
                         <p class="price__features">Aplicación desde cero</p>
                         <p class="price__features">Encapsuladas</p>
                         <p class="price__features">Moldes y syste dual</p>
                     </div>
-
                     <a href="https://walink.co/6bb097" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
@@ -589,34 +583,64 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">Pestañas pelo por pelo.</p>
+                    <p class="price__name">Soft gel más decoración con pedreria</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
-
                     <div class="price__items">
-                        <p class="price__features">Esculpidas</p>
-                        <p class="price__features">Encapsuladas</p>
-                        <p class="price__features">Decoraciones</p>
+                        <p class="price__features">Colocación de tips</p>
+                        <p class="price__features">Esmaltado</p>
+                        <p class="price__features">Tips de duración</p>
                     </div>
-
+                    <a href="https://walink.co/1fcffe" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
+                </div>
+                <!-- SEPARADOR-->
+                <div class="price__element">
+                    <p class="price__name">Pestañas pelo por pelo.</p>
+                    <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
+                    <div class="price__items">
+                        <p class="price__features">Tecnica clasica</p>
+                        <p class="price__features">Iniciación en extensiones</p>
+                        <p class="price__features"></p>
+                    </div>
                     <a href="https://walink.co/6c9696" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element">
-                    <p class="price__name">Soft gel más decoración con pedreria</p>
+                    <p class="price__name">LIFTING Y PERMANENTE CON TINTURA DE PESTAÑAS Y CEJAS más PERFILADO DE CEJAS.</p>
                     <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
-
                     <div class="price__items">
-                        <p class="price__features">Esculpidas</p>
+                        <p class="price__features">Practicas en modelo vivo</p>
                         <p class="price__features">Encapsuladas</p>
                         <p class="price__features">Decoraciones</p>
                     </div>
-
-                    <a href="https://walink.co/1fcffe" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
+                    <a href="https://walink.co/7b6f6b" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
+                </div>
+                <!-- SEPARADOR-->
+                <div class="price__element price__element--best">
+                    <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
+                    <h3 class="plan__price"><span class="price__signo">$</span>10.500</h3>
+                    <div class="price__items">
+                        <p class="price__features">Extensiones de pestañas pelo por pelo</p>
+                        <p class="price__features">Extensiones volumen ruso de 2D al 6D</p>
+                        <p class="price__features">Lifting y permanente</p>
+                        <p class="price__features">Tintura de cejas y pestañas</p>
+                        <p class="price__features">Perfilado de cejas</p>
+                    </div>
+                    <a href="https://walink.co/75a3a5" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
+                </div>
+                <!-- SEPARADOR-->
+                <div class="price__element">
+                    <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
+                    <h3 class="plan__price"><span class="price__signo">$</span>3.500</h3>
+                    <div class="price__items">
+                        <p class="price__features">Abanicos del 2D al 6D</p>
+                        <p class="price__features">Diseño segun el tipo de ojo</p>
+                        <p class="price__features">Diseños con mapeo</p>
+                    </div>
+                    <a href="https://walink.co/111148" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
                 </div>
             </div>
-            </div>
         </div>
-        
+
         </section>
 
         <section class="testimony" id="testimonio">
