Reparacion bug mobile
Se busco y encontró el bug de la versión Mobile menor a 400px

la misma causaba una colocación de la web contra su 'pared' izquierda.

--- a/index.html
+++ b/index.html
@@ -641,10 +641,11 @@
             </div>
         </div>
 
-        </section>
-
+    </section>
+    <div class="subtitle--testimony">
+    <h2 class="subtitle subtitle-testimony">Testimonios de alumnas</h2>
+    </div>
         <section class="testimony" id="testimonio">
-            <h2 class="subtitle subtitle--testimony">Testimonios de alumnas</h2>
             <div class="testimony__container container">
                 <img src="images/leftarrow.svg" alt="" class="testimony__arrow" id="before">
                 <section class="testimony__body testimony__body--show" data-id="1">
