--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
             </section>
 
             <section class="questions__offer">
-                <h2 class="subtitle">¿Estas lista para ser manicura?</h2>
+                <h2 class="subtitle">¿Estas lista?</h2>
                 <p class="questions__copy">Da ese paso del cual nunca te vas a arrepentir. </p>
             </section>
         </section>
@@ -775,7 +775,7 @@
     <footer class="footer">
         <section class="footer__container container">
             <nav class="nav nav--footer">
-                <h2 class="footer__title">Cursos de manicuria.</h2>
+                <h2 class="footer__title">Cursos de belleza y estetica.</h2>
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
                         <a href="#inicio" class="nav__links">Inicio</a>
